@@ -1,7 +1,7 @@
 
 plugin_LTLIBRARIES = libgstvorbis.la
 
-libgstvorbis_la_SOURCES = vorbis.c vorbisdec.c vorbisenc.c vorbisfile.c
+libgstvorbis_la_SOURCES = vorbis.c vorbisdec.c vorbisenc.c
 libgstvorbis_la_CFLAGS = $(GST_CFLAGS) $(VORBIS_CFLAGS) 
 ## AM_PATH_VORBIS also sets VORBISENC_LIBS
 libgstvorbis_la_LIBADD = $(VORBIS_LIBS) $(VORBISENC_LIBS) $(VORBISFILE_LIBS) 
